--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,7 @@
 
 .title {
   font-size: 72px;
-  background: linear-gradient(to bottom, #194c33, #bbb);
+  background: linear-gradient(to bottom, #630941, #770909);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -22,7 +22,7 @@
   width: 100%;
   height: 500px;
   object-fit: contain;
-   animation: move 3s infinite ease alternate; 
+  animation: move 3s infinite ease alternate; 
 }
 
 @keyframes move {
