--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -16,7 +16,7 @@
   position: absolute;
   bottom: 20px;
   left: 20px;
-  background-color: #53c28b;
+  background-color: #630941;
   padding: 5px;
   color: white;
 }
